Updated Models and added Test videos. Working on getting a live stream.

--- a/.gitignore
+++ b/.gitignore
@@ -45,11 +45,13 @@ SourceArt/**/*.png
 SourceArt/**/*.tga
 
 # Binary Files
-Binaries/*
+#Binaries/*
+Binaries/
 Plugins/*/Binaries/*
 
 # Builds
-Build/*
+#Build/*
+Build/
 
 # Whitelist PakBlacklist-<BuildConfiguration>.txt files
 !Build/*/
@@ -73,4 +75,5 @@ Intermediate/
 Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
-DerivedDataCache/*
+#DerivedDataCache/*
+DerivedDataCache/
