--- a/UE/Config/DefaultEngine.ini
+++ b/UE/Config/DefaultEngine.ini
@@ -91,6 +91,8 @@ r.DynamicGlobalIlluminationMethod=1
 r.ReflectionMethod=1
 
 r.Shadow.Virtual.Enable=1
+r.VirtualTextures=True
+r.VirtualTexturedLightmaps=True
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -169,7 +171,7 @@ bPublicLogFiles=True
 
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
-DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
+DefaultGraphicsRHI=DefaultGraphicsRHI_DX11
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
@@ -184,4 +186,7 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+[/Script/WmfMediaFactory.WmfMediaSettings]
+AllowNonStandardCodecs=True
 
