Messing around with the stream urls trying to get electra to work

--- a/UE/Config/DefaultEngine.ini
+++ b/UE/Config/DefaultEngine.ini
@@ -189,4 +189,5 @@ ManualIPAddress=
 
 [/Script/WmfMediaFactory.WmfMediaSettings]
 AllowNonStandardCodecs=True
+HardwareAcceleratedVideoDecoding=True
 
