--- a/UE/HsvMetaverse.uproject
+++ b/UE/HsvMetaverse.uproject
@@ -109,6 +109,14 @@
 			"Enabled": true
 		},
 		{
+			"Name": "ElectraCDM",
+			"Enabled": true
+		},
+		{
+			"Name": "ElectraSubtitles",
+			"Enabled": true
+		},
+		{
 			"Name": "ElectraUtil",
 			"Enabled": true
 		}
