Added chroma key material functions and all kinds of junk

--- a/UE/Config/DefaultEngine.ini
+++ b/UE/Config/DefaultEngine.ini
@@ -189,5 +189,7 @@ ManualIPAddress=
 
 [/Script/WmfMediaFactory.WmfMediaSettings]
 AllowNonStandardCodecs=True
-HardwareAcceleratedVideoDecoding=True
+HardwareAcceleratedVideoDecoding=False
+LowLatency=False
+NativeAudioOut=False
 
