Added Webcam Plugin. Works with about a 15 second delay. More testing needed

--- a/UE/HsvMetaverse.uproject
+++ b/UE/HsvMetaverse.uproject
@@ -106,24 +106,29 @@
 		},
 		{
 			"Name": "ElectraPlayer",
-			"Enabled": true
+			"Enabled": false
 		},
 		{
 			"Name": "ElectraCDM",
-			"Enabled": true
+			"Enabled": false
 		},
 		{
 			"Name": "ElectraSubtitles",
-			"Enabled": true
+			"Enabled": false
 		},
 		{
 			"Name": "ElectraUtil",
-			"Enabled": true
+			"Enabled": false
 		},
 		{
 			"Name": "OpenCVPlugin",
 			"Enabled": false,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/21bd77bd67b7445f9d5d54a2f7566b05"
+		},
+		{
+			"Name": "WebCameraPlugin",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/3ddb95273699400286e446c5515e9208"
 		}
 	],
 	"TargetPlatforms": [
