Added new blackbird models

--- a/UE/HsvMetaverse.uproject
+++ b/UE/HsvMetaverse.uproject
@@ -133,6 +133,14 @@
 		{
 			"Name": "Takes",
 			"Enabled": true
+		},
+		{
+			"Name": "StaticMeshEditorModeling",
+			"Enabled": true
+		},
+		{
+			"Name": "ModelingToolsEditorMode",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
